@@ -4,7 +4,7 @@ except ImportError:
     # Python 2
     from urllib import urlencode
 
-from elasticapm.utils import get_url_dict
+from elasticapm.utils import compat, get_url_dict
 from elasticapm.utils.wsgi import get_environ, get_headers
 
 
@@ -31,4 +31,16 @@ def get_data_from_request(request):
 
     result['url'] = get_url_dict(request.url)
 
+    return result
+
+
+def get_data_from_response(response):
+    result = {}
+
+    if isinstance(getattr(response, 'status_code', None), compat.integer_types):
+        result['status_code'] = response.status_code
+
+    if getattr(response, 'headers', None):
+        headers = response.headers
+        result['headers'] = {key: ';'.join(headers.getlist(key)) for key in compat.iterkeys(headers)}
     return result
