@@ -13,6 +13,7 @@
 https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev1\...master[Check the HEAD diff]
 
  * added request context information for Flask ({pull}58[#58])
+ * added response context information for Flask ({pull}65[#65])
  * BREAKING: changed the `SERVERS` list setting to a single `SERVER` string setting.
    With this change, we now only support sending events to a single server ({pull}59[#59])
  * BREAKING: removed root trace. Due to historical reason, we used to create a "root trace" which was equivalent
